bugfix: graphics combined with scrolling text didn't work on firefox

--- a/htdocs/js.webpack/javaOnlineEmbedded.css
+++ b/htdocs/js.webpack/javaOnlineEmbedded.css
@@ -3173,6 +3173,7 @@ svgns|path.dropdown-triangle:active {
 .jo_graphics {
     /* width: 100%; */
     z-index: 3;
+    flex-shrink: 0;
 }
 
 .jo_graphics>div {
